# janai2

./: .gitignore  .replit  pnpm-lock.yaml  pyproject.toml
.agents/memory/: MEMORY.md  janconnect-web-port.md  passlib-bcrypt-incompatibility.md
artifacts/web/: index.html  package.json
artifacts/web/.replit-artifact/: artifact.toml
artifacts/web/src/: App.tsx  index.css  main.tsx
artifacts/web/src/components/: dashboard-layout.tsx  logo.tsx  page-placeholder.tsx  protected-route.tsx  theme-provider.tsx  theme-toggle.tsx
artifacts/web/src/hooks/: use-auth.tsx
artifacts/web/src/lib/: demo-users.ts  map-data.ts  navigation.ts
artifacts/web/src/pages/: analytics.tsx  blood-requests.tsx  community-dashboard.tsx  community-feed.tsx  community-map.tsx  forgot-password.tsx  landing.tsx  login.tsx  medical-camps.tsx  profile.tsx  register.tsx  report-issue.tsx  settings.tsx  volunteers.tsx
backend/: .env.example  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 95e1e0af1aba_create_users_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: user.py
backend/app/routers/: auth.py  health.py
backend/app/schemas/: token.py  user.py
backend/app/services/: auth_service.py
backend/app/utils/: security.py
